# mortar-app

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json
.github/workflows/: ci.yml  release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: engine.rs  lib.rs  main.rs  maps.rs
src/components/: MapCard.tsx  Sidebar.tsx
src/lib/: api.ts  auth.ts  engine.ts  game.ts  maps.ts  store.ts
src/pages/: LoginPage.tsx  MapsPage.tsx  ProfilePage.tsx  SettingsPage.tsx  TournamentsPage.tsx
